--- a/css/style.css
+++ b/css/style.css
@@ -1099,7 +1099,7 @@ a{
   width: 400px;
   height: 300px;
   background: 
-    url('img/boldadecomprasco.png')
+    url('/img/boldadecomprasco.png')
     center/cover no-repeat;
   margin-bottom: 20px;
   border-radius: 10px;
@@ -1651,7 +1651,7 @@ a{
 
 .footer-section {
   background: 
-    url('img/nutriblanco.jpeg')
+    url('/img/nutriblanco.jpeg')
     center/700px 450px no-repeat;
   padding: 60px 0 30px;
   border-top: 1px solid #eee;
